Added link to home page

--- a/recipes/casserole.html
+++ b/recipes/casserole.html
@@ -6,6 +6,7 @@
   <title>Document</title>
 </head>
 <body>
+  <a href="../index.html">Home Page</a>
   <h1>Ahead Breakfast Casserole</h1>
 </body>
 </html>
