added picture of the dish on the screen

--- a/recipes/casserole.html
+++ b/recipes/casserole.html
@@ -8,5 +8,6 @@
 <body>
   <a href="../index.html">Home Page</a>
   <h1>Ahead Breakfast Casserole</h1>
+  <img src="/Screenshot_18-9-2025_102822_www.allrecipes.com.jpeg">
 </body>
 </html>
