Added description to the dish

--- a/recipes/casserole.html
+++ b/recipes/casserole.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  <a href="../index.html">Home Page</a>
-  <h1>Ahead Breakfast Casserole</h1>
-  <img src="/Screenshot_18-9-2025_102822_www.allrecipes.com.jpeg">
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <a href="../index.html">Home Page</a>
+    <h1>Ahead Breakfast Casserole</h1>
+    <img src="/Screenshot_18-9-2025_102822_www.allrecipes.com.jpeg" />
+    <h3>Description</h3>
+    <p>Mmm mmm good! This is a must do for every holiday in my household, or just when you have guests overnight!</p>
+    <p>Can be made with egg substitute, skim milk and turkey sausage to make it healthier!</p>
+  </body>
 </html>
