added ingredient list

--- a/recipes/casserole.html
+++ b/recipes/casserole.html
@@ -12,5 +12,13 @@
     <h3>Description</h3>
     <p>Mmm mmm good! This is a must do for every holiday in my household, or just when you have guests overnight!</p>
     <p>Can be made with egg substitute, skim milk and turkey sausage to make it healthier!</p>
+    <h4>Ingredients</h4>
+    <ul>
+      <li>2 ½ cups seasoned croutons</li>
+      <li>1 pound spicy pork sausage</li>
+      <li>4 eggs</li>
+      <li>2 ¼ cups milk</li>
+      <li>1 (10.75 ounce) can condensed cream of mushroom soup</li>
+    </ul>
   </body>
 </html>
