added the steps for the dish in a ol

--- a/recipes/casserole.html
+++ b/recipes/casserole.html
@@ -20,5 +20,12 @@
       <li>2 ¼ cups milk</li>
       <li>1 (10.75 ounce) can condensed cream of mushroom soup</li>
     </ul>
+    <h4>Steps</h4>
+    <ol>
+      <li>Spread croutons on bottom of greased 9x13 inch baking dish. Crumble sausage into medium skillet. Cook over medium heat until browned, stirring occasionally. Drain off any drippings. Spread sausage over croutons.</li>
+      <li>In a large bowl, whisk together eggs and milk until well blended. Stir in soup, spinach, mushrooms, cheeses and mustard. Pour egg mixture over sausage and croutons. Refrigerate overnight.</li>
+      <li>The next morning, preheat oven to 325 degrees F (165 degrees C).</li>
+      <li>Bake in preheated oven for 50 to 55 minutes or until set and lightly browned on top. Garnish with parsley sprigs and serve hot.</li>
+    </ol>
   </body>
 </html>
