--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -6,6 +6,26 @@
   <title>Document</title>
 </head>
 <body>
-
+  <a href="../index.html">Home Page</a>
+    <h1>Ahead Breakfast Casserole</h1>
+    <img src="/Screenshot_18-9-2025_102822_www.allrecipes.com.jpeg" />
+    <h3>Description</h3>
+    <p>Mmm mmm good! This is a must do for every holiday in my household, or just when you have guests overnight!</p>
+    <p>Can be made with egg substitute, skim milk and turkey sausage to make it healthier!</p>
+    <h4>Ingredients</h4>
+    <ul>
+      <li>2 ½ cups seasoned croutons</li>
+      <li>1 pound spicy pork sausage</li>
+      <li>4 eggs</li>
+      <li>2 ¼ cups milk</li>
+      <li>1 (10.75 ounce) can condensed cream of mushroom soup</li>
+    </ul>
+    <h4>Steps</h4>
+    <ol>
+      <li>Spread croutons on bottom of greased 9x13 inch baking dish. Crumble sausage into medium skillet. Cook over medium heat until browned, stirring occasionally. Drain off any drippings. Spread sausage over croutons.</li>
+      <li>In a large bowl, whisk together eggs and milk until well blended. Stir in soup, spinach, mushrooms, cheeses and mustard. Pour egg mixture over sausage and croutons. Refrigerate overnight.</li>
+      <li>The next morning, preheat oven to 325 degrees F (165 degrees C).</li>
+      <li>Bake in preheated oven for 50 to 55 minutes or until set and lightly browned on top. Garnish with parsley sprigs and serve hot.</li>
+    </ol>
 </body>
 </html>
