added links to the other recipes

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
   <h1>Odin Recipes</h1>
   <a href="./recipes/casserole.html">Make Ahead Breakfast Casserole</a>
+  <a href="./recipes/lasagne.html">Make a perfect Lasagne</a>
+  <a href="./recipes/pizza.html">Make a Italian Pizza</a>
 </body>
 </html>
